Update with copyright info (and updated trends.html with 2019 data)

--- a/trends.html
+++ b/trends.html
@@ -5,11 +5,13 @@ layout: default
 <br />    
 <p>At the end of every year since I founded Hack Education, I have reviewed what I think are the most important and influential trends in education technology. This is not just list of ten products or a quick dash through popular technologies that marketers are the most active pushing. Rather, it is an in-depth exploration of the events of the year and an analysis of how these events in education and in technology shape the way in which we imagine the future of teaching and learning.</p>
 
-<p><a href="http://2018trends.hackeducation.com"><strong>2018</strong></a>: The stories that were told this year included personalization, social emotional surveillance, and school security.</p>
+<p><a href="http://2019trends.hackeducation.com"><strong>2019</strong></a>: The stories that were told this year included anti-school shooting software, surveillance, and the collapse of certain startup darlings.</p>
 
 
 <h3>Previous Years <img src="https://s3.amazonaws.com/hackedu/template_previousyears.png" height="42" width="42" align="right" style="margin:10px"></h3>
 <br />
+
+<p><a href="http://2018trends.hackeducation.com"><strong>2018</strong></a>: The stories that were told this year included personalization, social emotional surveillance, and school security.</p>
 
 <p><a href="http://2017trends.hackeducation.com"><strong>2017</strong></a>: The stories included "fake news," "the innovation gospel," and "robots are coming for your jobs."</p>
 
